[gd_scene load_steps=9 format=3 uid="uid://b7fp4fy1hji0q"]

[ext_resource type="FontFile" path="res://resources/fonts/italic.tres" id="1"]
[ext_resource type="FontFile" path="res://resources/fonts/bold.tres" id="2"]
[ext_resource type="FontFile" path="res://resources/fonts/normal.tres" id="3"]
[ext_resource type="Script" path="res://scenes/GameInfo.gd" id="4"]
[ext_resource type="PackedScene" uid="uid://ggk1t1hiboam" path="res://scenes/media/VideoControls.tscn" id="5"]
[ext_resource type="Texture2D" uid="uid://wdi7id6fbtjw" path="res://assets/icons/play.svg" id="6"]
[ext_resource type="Script" path="res://addons/retrohub_theme_helper/ui/AccessibilityFocus.gd" id="7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6dqdb"]
bg_color = Color(0.14902, 0.14902, 0.14902, 1)

[node name="GameInfo" type="Popup"]
transparent_bg = true
initial_position = 1
size = Vector2i(928, 446)
visible = true
transparent = true
script = ExtResource("4")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6dqdb")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2

[node name="InfoScrollContainer" type="ScrollContainer" parent="Panel/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
follow_focus = true

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/InfoScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AgeRatingContainer" type="HBoxContainer" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Name" type="Label" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer/AgeRatingContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2")
text = "<game name>"
autowrap_mode = 3

[node name="AccessibilityFocus" type="Node" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer/AgeRatingContainer/Name"]
script = ExtResource("7")

[node name="HSeparator" type="HSeparator" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Description" type="Label" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1")
text = "<game description>"
autowrap_mode = 3

[node name="AccessibilityFocus" type="Node" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer/Description"]
script = ExtResource("7")

[node name="HSeparator2" type="HSeparator" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
text = "Developer: 
"

[node name="AccessibilityFocus" type="Node" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer/HBoxContainer/Label"]
script = ExtResource("7")

[node name="Developer" type="Label" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3")
text = "<game developer>"
autowrap_mode = 3

[node name="AccessibilityFocus" type="Node" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer/HBoxContainer/Developer"]
script = ExtResource("7")

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
text = "Publisher: 
"

[node name="AccessibilityFocus" type="Node" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer/HBoxContainer2/Label"]
script = ExtResource("7")

[node name="Publisher" type="Label" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3")
text = "<game publisher>"
autowrap_mode = 3

[node name="AccessibilityFocus" type="Node" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer/HBoxContainer2/Publisher"]
script = ExtResource("7")

[node name="HBoxContainer3" type="HBoxContainer" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
text = "Release date: 
"

[node name="AccessibilityFocus" type="Node" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer/HBoxContainer3/Label"]
script = ExtResource("7")

[node name="ReleaseDate" type="Label" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3")
text = "<game release date>"
autowrap_mode = 3

[node name="AccessibilityFocus" type="Node" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer/HBoxContainer3/ReleaseDate"]
script = ExtResource("7")

[node name="HBoxContainer4" type="HBoxContainer" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
text = "Rating: 
"

[node name="AccessibilityFocus" type="Node" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer/HBoxContainer4/Label"]
script = ExtResource("7")

[node name="Rating" type="Label" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3")
text = "<game rating>"
autowrap_mode = 3

[node name="AccessibilityFocus" type="Node" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer/HBoxContainer4/Rating"]
script = ExtResource("7")

[node name="HBoxContainer5" type="HBoxContainer" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
text = "Genres: 
"

[node name="AccessibilityFocus" type="Node" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer/HBoxContainer5/Label"]
script = ExtResource("7")

[node name="Genres" type="Label" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3")
text = "<game genres>"
autowrap_mode = 3

[node name="AccessibilityFocus" type="Node" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer/HBoxContainer5/Genres"]
script = ExtResource("7")

[node name="HBoxContainer6" type="HBoxContainer" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
text = "Players: 
"

[node name="AccessibilityFocus" type="Node" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer/HBoxContainer6/Label"]
script = ExtResource("7")

[node name="NumPlayers" type="Label" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer/HBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3")
text = "<game num players>"
autowrap_mode = 3

[node name="AccessibilityFocus" type="Node" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer/HBoxContainer6/NumPlayers"]
script = ExtResource("7")

[node name="HBoxContainer7" type="HBoxContainer" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer/HBoxContainer7"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
text = "Favorite? 
"

[node name="AccessibilityFocus" type="Node" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer/HBoxContainer7/Label"]
script = ExtResource("7")

[node name="Favorite" type="CheckBox" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer/HBoxContainer7"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
focus_mode = 0
disabled = true

[node name="AccessibilityFocus" type="Node" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer/HBoxContainer7/Favorite"]
script = ExtResource("7")

[node name="HBoxContainer9" type="HBoxContainer" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer/HBoxContainer9"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
text = "Play count:
"

[node name="AccessibilityFocus" type="Node" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer/HBoxContainer9/Label"]
script = ExtResource("7")

[node name="PlayCount" type="Label" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer/HBoxContainer9"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3")
text = "<game play count> (<game last played>)"
autowrap_mode = 3

[node name="AccessibilityFocus" type="Node" parent="Panel/HBoxContainer/InfoScrollContainer/VBoxContainer/HBoxContainer9/PlayCount"]
script = ExtResource("7")

[node name="VSeparator" type="VSeparator" parent="Panel/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MediaViewer" type="Control" parent="Panel/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="NoMedia" type="Label" parent="Panel/HBoxContainer/VBoxContainer2/MediaViewer"]
unique_name_in_owner = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_colors/font_color = Color(0.635294, 0.635294, 0.635294, 1)
theme_override_fonts/font = ExtResource("1")
text = "No game media available to show"

[node name="AccessibilityFocus" type="Node" parent="Panel/HBoxContainer/VBoxContainer2/MediaViewer/NoMedia"]
script = ExtResource("7")

[node name="TextureRoot" type="VBoxContainer" parent="Panel/HBoxContainer/VBoxContainer2/MediaViewer"]
unique_name_in_owner = true
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MediaTexture" type="TextureRect" parent="Panel/HBoxContainer/VBoxContainer2/MediaViewer/TextureRoot"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
expand_mode = 1
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer/VBoxContainer2/MediaViewer/TextureRoot"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/HBoxContainer/VBoxContainer2/MediaViewer/TextureRoot/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2")
text = "Type: "

[node name="AccessibilityFocus" type="Node" parent="Panel/HBoxContainer/VBoxContainer2/MediaViewer/TextureRoot/HBoxContainer/Label"]
script = ExtResource("7")

[node name="MediaLabel" type="Label" parent="Panel/HBoxContainer/VBoxContainer2/MediaViewer/TextureRoot/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("3")

[node name="AccessibilityFocus" type="Node" parent="Panel/HBoxContainer/VBoxContainer2/MediaViewer/TextureRoot/HBoxContainer/MediaLabel"]
script = ExtResource("7")

[node name="VideoControls" parent="Panel/HBoxContainer/VBoxContainer2/MediaViewer" instance=ExtResource("5")]
unique_name_in_owner = true
layout_mode = 1
grow_horizontal = 2
grow_vertical = 2

[node name="HSeparator" type="HSeparator" parent="Panel/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="MediaScrollContainer" type="ScrollContainer" parent="Panel/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 125)
layout_mode = 2
follow_focus = true

[node name="MediaPreviewContainer" type="HBoxContainer" parent="Panel/HBoxContainer/VBoxContainer2/MediaScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator2" type="HSeparator" parent="Panel/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="PlayButton" type="Button" parent="Panel/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "Play"
icon = ExtResource("6")

[connection signal="popup_hide" from="." to="." method="_on_GameInfo_popup_hide"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer2/PlayButton" to="." method="_on_PlayButton_pressed"]
